...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:borderWidth="0.1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.100000024"
        app:maxImageSize="36dp"
        app:srcCompat="@mipmap/graph_launcher" />

    <EditText
        android:id="@+id/calculation_textarea"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:background="@null"
        android:cursorVisible="true"
        android:gravity="bottom"
        android:importantForAutofill="no"
...
